--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,11 +17,21 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.7
+          terraform_version: 1.5.7  # Use the version you're working with
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ AKIAZQ3DOLMAAFD54URS   }}
+          aws-secret-access-key: ${{ 0k9Ctc4pwQVdfn2b5G2X3kDcQ95gVzcbGfdV8fI }}
+          aws-region: ap-south-1
 
       - name: Terraform Init
         run: terraform init
 
       - name: Terraform Plan
         run: terraform plan
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
 
